tests/lit/yalang/syntax/errors/else2.ya
// RUN: @compiler --emit yair @file
 
func : function() : void {
  {

  // CHECK: error: Else statement without an if
  } else {

  }
}
